--- a/pom.xml
+++ b/pom.xml
@@ -60,14 +60,15 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
-
-
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
             <version>7.0.1.Final</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
