--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,3 +9,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8073/auth/realms/task-buster
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8073/auth/realms/task-buster/protocol/openid-connect/certs
