Add OAuth2.0 by Facebok and Google

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,5 +10,13 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8073/auth/realms/task-buster
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8073/auth/realms/task-buster/protocol/openid-connect/certs
+spring.security.oauth2.client.registration.google.client-id=860271601494-mcr553d5vn5nuqj9npvcb5rb5kjiau50.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=9HBMF33TFh5_2B7LZu0t_k5s
+spring.security.oauth2.client.registration.google.redirectUri=http://localhost:4200/callback
+spring.security.oauth2.client.registration.google.scope=email
+
+
+spring.security.oauth2.client.registration.facebook.client-id=535596317595750
+spring.security.oauth2.client.registration.facebook.client-secret=4b3f6136fc36f14bb439266c72ed0726
+spring.security.oauth2.client.registration.facebook.redirectUri=http://localhost:4200/callback
+spring.security.oauth2.client.registration.facebook.scope=email
